--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+server.port=8761
+# do not register server as a client
+eureka.client.fetch-registry=false
+# Does not register itself in the service registry
+eureka.client.register-with-eureka=false
