--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
-spring.application.name=inventory-service
-spring.cloud.discovery.enabled=false
+spring.cloud.discovery.enabled= true
 server.port=8082
+spring.application.name=inventory-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
