--- a/bank-account-micro-service/pom.xml
+++ b/bank-account-micro-service/pom.xml
@@ -67,6 +67,11 @@
 			<version>1.6.11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
