--- a/bank-account-micro-service/pom.xml
+++ b/bank-account-micro-service/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.ws/spring-ws-core -->
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+			<version>3.1.3</version>
+		</dependency>
 
 	</dependencies>
 
@@ -106,7 +112,10 @@
 				</executions>
 				<configuration>
 					<sources>
-						<source>${project.basedir}/src/main/resources/soap/countries.xsd</source>
+<!--						<source>${project.basedir}/src/main/resources/soap/file.xsd</source>-->
+						<schemaDirectory>${project.basedir}/src/main/resources/soap/</schemaDirectory>
+						<outputDirectory>${project.basedir}/src/main/java/soap/generatedWSClasses/</outputDirectory>
+						<clearOutputDir>false</clearOutputDir>
 					</sources>
 				</configuration>
 			</plugin>
